# downloaders

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg  tutorial.ipynb
downloaders/: DownloadTarget.py  IDownloader.py  Metalink.py  __init__.py
downloaders/backends/: aria2c.py
