[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "downloaders"
authors = [{name = "KOLANICH"}]
description = "Just an abstraction layer around various backends for downloading content **more efficiently than `requests` can**. That assummes multi-stream downloading."
readme = "ReadMe.md"
keywords = ["downloaders"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = ["fsutilz @ git+https://github.com/prebuilder/fsutilz.py.git"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/prebuilder/downloaders.py"

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
